--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff5722</color>
-    <color name="colorPrimaryDark">#E64A19</color>
+    <color name="colorPrimary">#ffae22</color>
+    <color name="colorPrimaryDark">#e67c19</color>
     <color name="colorAccent">#00bfff</color>
     <color name="textPrimary">#ffffff</color>
     <!-- AB colors -->
@@ -18,4 +18,5 @@
     <color name="colorPrimaryBA">#ffd500</color>
     <color name="colorPrimaryDarkBA">#ffaa00</color>
     <color name="colorAccentBA">#2bff00</color>
+    <color name="splash">#d2e6ff00</color>
 </resources>
