--- a/src/main/res/xml/about.xml
+++ b/src/main/res/xml/about.xml
@@ -8,8 +8,8 @@
     <header
         android:title="@string/licence"
         android:summary="@string/licenceSummary"/>
-        <intent android:targetPackage="cz.fely.weightedaverage"
-            android:targetClass="cz.fely.weightedaverage.LicenceActivity"
+        <intent android:targetPackage="com.felycz.weightedaverage"
+            android:targetClass="com.felycz.weightedaverage.LicenceActivity"
         />
 
 </preference-headers>
