--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<RelativeLayout tools:context="com.felycz.weightedaverage.MainActivity"
+<RelativeLayout tools:context="cz.fely.weightedaverage.MainActivity"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/activity_main"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar" />
 
     <EditText
         android:layout_height="40dp"
@@ -114,8 +110,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/linearl2"
-        android:divider="@color/black"
-        android:dividerHeight="1px" />
+        style="@style/Widget.AppCompat.ListView"/>
 
     <Button
         android:layout_height="wrap_content"
@@ -130,5 +125,9 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:background="@drawable/button_style"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/tool_bar"/>
 
 </RelativeLayout>
