--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,32 +1,32 @@
 <resources>
-    <style name="Default" parent="Theme.AppCompat.Light.NoActionBar" >
-        <item name="android:colorPrimaryDark">@color/colorPrimaryDarkBA</item>
-        <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:colorPrimary">@color/colorPrimary</item>
-        <item name="android:textColorPrimary">@color/black</item>
-        <item name="android:colorBackground">@color/white</item>
+
+    <style name="Light" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Dark" parent="Theme.AppCompat">
-        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:colorPrimary">@color/colorPrimary</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:colorBackground">@color/darkGrey</item>
+    <style name="Dark" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:background">@color/background_material_dark</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
     </style>
 
-    <style name="Light" parent="Theme.AppCompat.Light">
-        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:colorPrimary">@color/colorPrimary</item>
-        <item name="android:textColorPrimary">@color/black</item>
+    <style name="Dark.Black" parent="Theme.AppCompat.NoActionBar">
+        <item name="background">@color/app_background_black</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
     </style>
 
-    <style name="ListStyle" parent="Widget.AppCompat.ListView">
-        <item name="android:textColor">@color/black</item>
-    </style>
+    <style name="Light.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="ToolbarStyle" parent="Theme.AppCompat.Light.NoActionBar">
-
-    </style>
+    <style name="Light.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
