--- a/src/main/res/xml/header.xml
+++ b/src/main/res/xml/header.xml
@@ -1,14 +1,14 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
     <header
-        android:fragment="com.felycz.weightedaverage.SettingsActivity$Headers$GeneralPreferenceFragment"
+        android:fragment="cz.fely.weightedaverage.SettingsActivity$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/generalHeader"
         android:summary="@string/generalHeaderSummary"/>
-
+<!--
     <header
-        android:fragment="com.felycz.weightedaverage.SettingsActivity$Headers$NotificationPreferenceFragment"
+        android:fragment="cz.fely.weightedaverage.SettingsActivity$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" />
 
-
+-->
 </preference-headers>
