--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -4,29 +4,25 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="Dark" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:background">@color/background_material_dark</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="actionMenuTextColor">@android:color/white</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorForeground">@color/foreground</item>
+        <item name="android:windowBackground">@color/foreground</item>
+        <item name="android:colorBackground">@color/foreground</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="Dark.Black" parent="Theme.AppCompat.NoActionBar">
-        <item name="background">@color/app_background_black</item>
+        <item name="android:windowBackground">@color/app_background_black</item>
+        <item name="android:colorBackground">@color/app_background_black</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="actionMenuTextColor">@android:color/white</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:colorForeground">@color/app_background_black</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
-
-    <style name="Light.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-
-    <style name="Light.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
