--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -8,26 +8,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <EditText
-        android:layout_height="40dp"
         android:layout_width="wrap_content"
-        android:id="@+id/etName"
-        android:layout_toStartOf="@+id/etMark"
-        android:layout_toLeftOf="@+id/etMark"
+        android:id="@+id/btnAddPopUp"
+        android:layout_toStartOf="@+id/etMarkPopUp"
+        android:layout_toLeftOf="@+id/etMarkPopUp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tool_bar"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:hint="@string/hintET"
         android:inputType="text"
         android:ems="10"
-        android:imeOptions="actionNext"/>
+        android:imeOptions="actionNext"
+        android:layout_height="50dp"/>
 
     <EditText
-        android:layout_height="40dp"
-        android:layout_width="60dp"
-        android:id="@+id/etWeight"
+        android:layout_width="80dp"
+        android:id="@+id/etMarkPopUp"
+        android:textSize="18sp"
+        android:hint="@string/mark"
+        android:inputType="numberDecimal"
+        android:gravity="center_vertical"
+        android:imeOptions="actionNext"
+        android:layout_height="50dp"
         android:layout_below="@+id/tool_bar"
-        android:textSize="16sp"
+        android:layout_toLeftOf="@+id/etWeightPopUp"
+        android:layout_toStartOf="@+id/etWeightPopUp"/>
+
+    <EditText
+        android:layout_width="60dp"
+        android:id="@+id/etWeightPopUp"
+        android:layout_below="@+id/tool_bar"
+        android:textSize="18sp"
         android:hint="@string/weight"
         android:inputType="number"
         android:ems="10"
@@ -35,7 +47,8 @@
         android:layout_alignParentRight="true"
         android:textAlignment="center"
         android:maxLength="2"
-        android:imeOptions="actionDone"/>
+        android:imeOptions="actionDone"
+        android:layout_height="50dp"/>
 
 
     <LinearLayout
@@ -107,7 +120,7 @@
         android:id="@+id/btnAdd"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/etName"
+        android:layout_below="@+id/btnAddPopUp"
         android:textSize="18sp"
         android:text="@string/buttonAdd"
         android:onClick="addMark"
@@ -118,19 +131,5 @@
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"/>
-
-    <EditText
-        android:layout_height="40dp"
-        android:layout_width="80dp"
-        android:id="@+id/etMark"
-        android:textSize="16sp"
-        android:hint="@string/mark"
-        android:inputType="numberDecimal"
-        android:gravity="center_vertical"
-        android:imeOptions="actionNext"
-        android:layout_alignBaseline="@+id/etWeight"
-        android:layout_alignBottom="@+id/etWeight"
-        android:layout_toLeftOf="@+id/etWeight"
-        android:layout_toStartOf="@+id/etWeight"/>
 
 </RelativeLayout>
