--- a/src/main/res/layout/colmn_row.xml
+++ b/src/main/res/layout/colmn_row.xml
@@ -10,7 +10,8 @@
         android:textSize="20sp"
         android:textStyle="normal|italic"
         android:gravity="center_vertical"
-        android:layout_height="35dp" />
+        android:layout_height="35dp"
+        />
 
 
     <TextView
@@ -18,10 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_weight="0.24"
         android:textSize="20sp"
-        android:textStyle="normal|bold"
-        android:textAlignment="center"
         android:gravity="center_vertical"
-        android:layout_height="35dp" />
+        android:layout_height="35dp"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/weight"
