--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -9,11 +9,9 @@
         android:orderInCategory="105"
         android:title="@string/action_settings" />
 
-    <item android:title="@string/changelog"
-        android:id="@+id/action_changelog"
-        android:checkable="false"
-        android:orderInCategory="106" />
-
+    <item android:title="@string/popUpShowMenu"
+          android:id="@+id/action_pop"
+          android:orderInCategory="106"/>
     <item
         android:id="@+id/action_feedback"
         android:orderInCategory="107"
