--- a/src/main/res/xml/header.xml
+++ b/src/main/res/xml/header.xml
@@ -4,11 +4,11 @@
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/generalHeader"
         android:summary="@string/generalHeaderSummary"/>
-<!--
-    <header
-        android:fragment="cz.fely.weightedaverage.SettingsActivity$NotificationPreferenceFragment"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/pref_header_notifications" />
 
--->
+    <header
+        android:fragment="cz.fely.weightedaverage.SettingsActivity$SoundAndVibrateFragment"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/pref_sound_vibrate"
+        android:summary="@string/pref_sound_vibrate_summary" />
+
 </preference-headers>
