--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -9,35 +9,38 @@
 
     <EditText
         android:layout_width="wrap_content"
-        android:id="@+id/btnAddPopUp"
-        android:layout_toStartOf="@+id/etMarkPopUp"
-        android:layout_toLeftOf="@+id/etMarkPopUp"
+        android:id="@+id/etName"
+        android:layout_toStartOf="@+id/etMark"
+        android:layout_toLeftOf="@+id/etMark"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tool_bar"
         android:textSize="18sp"
         android:hint="@string/hintET"
         android:inputType="text"
-        android:ems="10"
         android:imeOptions="actionNext"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:maxLength="20"
+        android:maxLines="1"
+        android:singleLine="true"/>
 
     <EditText
         android:layout_width="80dp"
-        android:id="@+id/etMarkPopUp"
+        android:id="@+id/etMark"
         android:textSize="18sp"
         android:hint="@string/mark"
-        android:inputType="numberDecimal"
+        android:inputType="number|numberDecimal"
         android:gravity="center_vertical"
         android:imeOptions="actionNext"
         android:layout_height="50dp"
         android:layout_below="@+id/tool_bar"
-        android:layout_toLeftOf="@+id/etWeightPopUp"
-        android:layout_toStartOf="@+id/etWeightPopUp"/>
+        android:layout_toLeftOf="@+id/etWeight"
+        android:layout_toStartOf="@+id/etWeight"
+        android:maxLength="3"/>
 
     <EditText
         android:layout_width="60dp"
-        android:id="@+id/etWeightPopUp"
+        android:id="@+id/etWeight"
         android:layout_below="@+id/tool_bar"
         android:textSize="18sp"
         android:hint="@string/weight"
@@ -46,7 +49,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:textAlignment="center"
-        android:maxLength="2"
+        android:maxLength="3"
         android:imeOptions="actionDone"
         android:layout_height="50dp"/>
 
@@ -120,7 +123,7 @@
         android:id="@+id/btnAdd"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/btnAddPopUp"
+        android:layout_below="@+id/etName"
         android:textSize="18sp"
         android:text="@string/buttonAdd"
         android:onClick="addMark"
