--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- BASE COLORS -->
     <color name="colorPrimary">#ffae22</color>
     <color name="colorPrimaryDark">#e67c19</color>
     <color name="colorAccent">#00bfff</color>
     <color name="app_background_black">#000000</color>
     <color name="foreground">#303030</color>
+    <color name="greyPopup">#30020105</color>
+
+    <!-- DARK THEME -->
+    <color name="colorPrimaryDT">#00bfff</color>
+    <color name="colorPrimaryDarkDT">#003cff</color>
+    <color name="colorAccentDT">#d9ff00</color>
+
+    <!-- BLACK THEME -->
+    <color name="colorPrimaryBT">#00dc07</color>
+    <color name="colorPrimaryDarkBT">#00a000</color>
+    <color name="colorAccentBT">#ff0000</color>
 </resources>
