--- a/src/main/res/layout/colmn_row.xml
+++ b/src/main/res/layout/colmn_row.xml
@@ -3,15 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+     <me.grantland.widget.AutofitTextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp"
         android:textStyle="normal|italic"
         android:gravity="center_vertical"
         android:layout_height="35dp"
-        />
+        android:maxLines="1"
+        android:textSize="20sp"
+        autofit:minTextSize="15dp" />
 
 
     <TextView
