--- a/src/main/res/layout/colmn_row.xml
+++ b/src/main/res/layout/colmn_row.xml
@@ -5,9 +5,9 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="normal|italic"
         android:gravity="center_vertical"
         android:layout_height="35dp"
@@ -16,9 +16,9 @@
 
     <TextView
         android:id="@+id/mark"
-        android:layout_width="wrap_content"
-        android:layout_weight="0.24"
-        android:textSize="20sp"
+        android:layout_width="0dp"
+        android:layout_weight="0.4"
+        android:textSize="18sp"
         android:gravity="center_vertical"
         android:layout_height="35dp"
         android:textStyle="normal|bold"
@@ -27,10 +27,10 @@
     <TextView
         android:id="@+id/weight"
         android:layout_weight="0.25"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:textStyle="normal|bold"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:gravity="center_vertical"
         android:layout_height="35dp" />
 
