--- a/src/main/res/xml/prefs.xml
+++ b/src/main/res/xml/prefs.xml
@@ -16,7 +16,7 @@
             android:entryValues="@array/themesValues"
             android:key="pref_key_general_theme"
             android:title="@string/pref_theme_title"
-            android:summary="@string/needRestart"
+            android:summary="@string/themeSummary"
             android:dialogTitle="@string/pref_theme_dialog_title"/>
     </PreferenceCategory>
 
