--- a/src/main/res/xml/prefs.xml
+++ b/src/main/res/xml/prefs.xml
@@ -8,7 +8,8 @@
             android:key="pref_key_general_weight"
             android:title="@string/weightedEnabled"
             android:summaryOff="@string/weightedEnableSummary"
-            android:summaryOn="@string/weightedDisableSummary"/>
+            android:summaryOn="@string/weightedDisableSummary"
+            />
 
         <ListPreference
             android:defaultValue="0"
@@ -17,7 +18,8 @@
             android:key="pref_key_general_theme"
             android:title="@string/pref_theme_title"
             android:summary="@string/themeSummary"
-            android:dialogTitle="@string/pref_theme_dialog_title"/>
+            android:dialogTitle="@string/pref_theme_dialog_title"
+            />
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -28,6 +30,53 @@
             android:key="pref_key_sound_vibrate"
             android:title="@string/vibrateSwitchTitle"
             android:summaryOn="@string/vibrateSwitchSummaryOn"
-            android:summaryOff="@string/vibrateSwitchSummaryOff"/>
+            android:summaryOff="@string/vibrateSwitchSummaryOff"
+            />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/subjectPrefsCat">
+
+        <Preference
+            android:summary="@string/changesAfterRestart"
+            />
+
+        <EditTextPreference
+            android:title="@string/subjectOneNamePrefs"
+            android:key="pref_key_subject_name_one"
+            android:defaultValue="@string/nameOneDefault"
+            />
+
+
+        <EditTextPreference
+            android:title="@string/subjectTwoNamePrefs"
+            android:key="pref_key_subject_name_two"
+            android:defaultValue="@string/nameTwoDefault"
+            />
+
+        <EditTextPreference
+            android:title="@string/subjectThreeNamePrefs"
+            android:key="pref_key_subject_name_three"
+            android:defaultValue="@string/nameThreeDefault"
+            />
+
+        <EditTextPreference
+            android:title="@string/subjectFourNamePrefs"
+            android:key="pref_key_subject_name_four"
+            android:defaultValue="@string/nameFourDefault"
+            />
+
+        <EditTextPreference
+            android:title="@string/subjectFiveNamePrefs"
+            android:key="pref_key_subject_name_five"
+            android:defaultValue="@string/nameFiveDefault"
+            />
+
+        <EditTextPreference
+            android:title="@string/subjectSixNamePrefs"
+            android:key="pref_key_subject_name_six"
+            android:defaultValue="@string/nameSixDefault"
+            />
+
     </PreferenceCategory>
 </PreferenceScreen>
