--- a/src/main/res/layout-land/activity_main.xml
+++ b/src/main/res/layout-land/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<RelativeLayout tools:context="cz.fely.weightedaverage.MainActivityOld"
+<RelativeLayout
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:id="@+id/activity_main"
