--- a/src/main/res/layout-land/activity_main.xml
+++ b/src/main/res/layout-land/activity_main.xml
@@ -7,11 +7,6 @@
                 xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <View android:id="@+id/fakeView"
-          android:layout_width="0dp"
-          android:layout_height="0dp"
-          android:layout_centerInParent="true"/>
-
     <LinearLayout
         android:layout_height="35dp"
         android:layout_width="500dp"
@@ -65,84 +60,7 @@
         android:dividerHeight="1px"
         android:layout_below="@+id/linearl2"
         android:layout_toRightOf="@+id/image1"
-        android:layout_toEndOf="@+id/image1"/>
-
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/btnAdd"
-        android:textSize="18sp"
-        android:text="@string/buttonAdd"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:background="@drawable/button_style"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_below="@+id/etWeight"
-        android:layout_alignRight="@+id/fakeView"
-        android:layout_alignEnd="@+id/fakeView"/>
-
-    <TextView
-        android:layout_height="35dp"
-        android:layout_width="wrap_content"
-        android:id="@+id/averageTV"
-        android:textSize="25sp"
-        android:gravity="center"
-        android:textStyle="normal|bold"
-        android:text="@string/prumer"
-        android:layout_below="@+id/btnAdd"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/fakeView"
-        android:layout_alignEnd="@+id/fakeView"/>
-
-    <EditText
-        android:layout_height="40dp"
-        android:layout_width="wrap_content"
-        android:id="@+id/etName"
-        android:textSize="16sp"
-        android:hint="@string/hintET"
-        android:inputType="text"
-        android:ems="10"
-        android:imeOptions="actionNext"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/fakeView"
-        android:layout_alignEnd="@+id/fakeView"/>
-
-    <EditText
-        android:layout_height="40dp"
-        android:layout_width="80dp"
-        android:id="@+id/etMark"
-        android:textSize="16sp"
-        android:hint="@string/mark"
-        android:inputType="numberDecimal"
-        android:gravity="center_vertical"
-        android:textAlignment="center"
-        android:imeOptions="actionNext"
-        android:layout_below="@+id/etName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/fakeView"
-        android:layout_alignEnd="@+id/fakeView"/>
-
-    <EditText
-        android:layout_height="40dp"
-        android:layout_width="60dp"
-        android:id="@+id/etWeight"
-        android:textSize="16sp"
-        android:hint="@string/weight"
-        android:inputType="number"
-        android:ems="10"
-        android:textAlignment="center"
-        android:maxLength="2"
-        tools:ignore="UnknownId"
-        android:imeOptions="actionDone"
-        android:layout_below="@+id/etMark"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/lvZnamky"
-        android:layout_toStartOf="@+id/lvZnamky"/>
+        android:layout_toEndOf="@+id/image1" />
 
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -156,8 +74,105 @@
         android:paddingTop="2dp"
         android:layout_toRightOf="@+id/etName"
         android:layout_width="2dp"
-        tools:ignore="ContentDescription"
+        tools:ignore="ContentDescription,NotSibling,RtlHardcoded"
         android:layout_centerInParent="true"
         android:id="@+id/image1"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View android:id="@+id/fakeView"
+                  android:layout_width="0dp"
+                  android:layout_height="0dp"
+                  android:layout_centerInParent="true"/>
+
+            <EditText
+                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:id="@+id/etName"
+                android:textSize="16sp"
+                android:hint="@string/hintET"
+                android:inputType="text"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:maxLength="25"
+                android:textAlignment="center"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/fakeView"
+                android:layout_alignEnd="@+id/fakeView"/>
+
+            <EditText
+                android:layout_height="40dp"
+                android:layout_width="80dp"
+                android:id="@+id/etMark"
+                android:textSize="16sp"
+                android:hint="@string/mark"
+                android:inputType="numberDecimal"
+                android:gravity="center_vertical"
+                android:textAlignment="center"
+                android:imeOptions="actionNext"
+                android:layout_below="@+id/etName"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/fakeView"
+                android:layout_alignEnd="@+id/fakeView"/>
+
+            <EditText
+                android:layout_height="40dp"
+                android:layout_width="60dp"
+                android:id="@+id/etWeight"
+                android:textSize="16sp"
+                android:hint="@string/weight"
+                android:inputType="number"
+                android:ems="10"
+                android:textAlignment="center"
+                android:maxLength="3"
+                android:imeOptions="actionSend"
+                android:layout_below="@+id/etMark"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/fakeView"
+                android:layout_alignEnd="@+id/fakeView"
+                tools:ignore="NotSibling" />
+
+            <Button
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/btnAdd"
+                android:textSize="18sp"
+                android:text="@string/buttonAdd"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:background="@drawable/button_style"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_below="@+id/etWeight"
+                android:layout_alignRight="@+id/etWeight"
+                android:layout_alignEnd="@+id/etWeight"
+                android:layout_marginRight="1dp"/>
+
+            <TextView
+                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:id="@+id/averageTV"
+                android:textSize="25sp"
+                android:gravity="center"
+                android:textStyle="normal|bold"
+                android:text="@string/prumer"
+                android:layout_below="@+id/btnAdd"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/fakeView"
+                android:layout_alignEnd="@+id/fakeView"/>
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
