--- a/src/main/res/layout/main_coordinator.xml
+++ b/src/main/res/layout/main_coordinator.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
-                                                  android:layout_height="match_parent">
+                                                  android:layout_height="match_parent"
+    android:id="@+id/coordinator">
 
 <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
@@ -21,12 +22,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="scrollable"
-        app:tabGravity="fill"/>
+        app:tabGravity="fill"
+        android:saveEnabled="true"
+        />
 </android.support.design.widget.AppBarLayout>
 
 <android.support.v4.view.ViewPager
     android:id="@+id/viewpager"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="10dp"/>
 </android.support.design.widget.CoordinatorLayout>
