--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -25,6 +25,6 @@
         android:icon="@drawable/remove"
         tools:ignore="AppCompatResource"
         android:titleCondensed="@string/vymazatZnamky"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|withText" />
 
 </menu>
